--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <a href="https://www.instagram.com/miles_gamedev/" target="_blank">Instagram</a>
                         <a href="https://twitter.com/MilesGamedev" target="_blank">Twitter</a>
                         <a href="https://www.youtube.com/channel/UCRNJrjOnLN6sdJM2odh0qfA" target="_blank">Youtube</a>
-                        <a href="https://morfeudev.itch.io" target="_blank">Itch.io</a>
+                        <a href="https://milesgamedev.itch.io" target="_blank">Itch.io</a>
                     </nav>
                 </div>
             </div>
