--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div id="Jogos">
             <div class="p-2"></div>            
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-">
+                <div class="col-lg-4 col-md-6">
                     <div id="container">
                         <!--Pong-->
                         <div id="Games" class="center">
@@ -112,7 +112,7 @@
                                     src="./Img/Download.png" alt=""></a></div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-">
+                <div class="col-lg-4 col-md-6">
                     <div id="container">
                         <!--SpaceShooter-->
                         <div id="Games" class="center">
@@ -128,7 +128,7 @@
                                     src="./Img/Download.png" alt=""></a></div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-">
+                <div class="col-lg-4 col-md-6">
                     <div id="container">
                         <!--Jogo da Velha-->
                         <div id="Games" class="center">
