--- a/index.html
+++ b/index.html
@@ -10,10 +10,27 @@
     <link rel="stylesheet" href="./CSS/BodyStyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./Img/Joystick.ico">
-    <title>Miles GameDev</title>
+    <title>Alisson GameDev</title>
 </head>
 
 <body>
+    <nav id="socialMedia" class="navbar-expand-lg">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.linkedin.com/in/alisson-marques-benedicto-da-silva-799765212/" target="_blank"><i class="fa fa-2x fa-linkedin-square" aria-hidden="true"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a href="https://www.youtube.com/channel/UCRNJrjOnLN6sdJM2odh0qfA" class="nav-link" ><i class="fa fa-2x fa-youtube" aria-hidden="true"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a href="https://twitter.com/MilesGamedev" class="nav-link" target="_blank"><i class="fa fa-2x fa-twitter-square" aria-hidden="true"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a href="https://sketchfab.com/alissonGamedev" class="nav-link" target="_blank"><img src="./Img/ScketchFab.png"
+                        alt="" width="35px" height="35px"></a>
+                </li>
+            </ul>
+    </nav>
     <header id="Home">
     </header>
     <nav class="navbar-expand-lg" id="navbar">
@@ -31,6 +48,9 @@
                     <a href="#Jogos" class="nav-link"><img src="./Img/Games.png" alt=""></a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#Artes"><img src="./Img/Arte.png" alt=""></a>
+                </li>
+                <li class="nav-item">
                     <a href="#Contato"><img src="./Img/Contato.png" alt=""></a>
                 </li>
             </ul>
@@ -38,7 +58,7 @@
     </nav>
         <div id="Info" class="Info row center">
             <div id=text class="col-md-3">
-                <font size="2">
+                <font size="3">
                    A lei da mente e implacavel. <br>
                    Oque você pensa, você cria; <br>
                    O que você sente, você atrai; <br>
@@ -48,12 +68,12 @@
                         style="color:#df3e23; font-weight:bold; font-size:150%;">~Buda~</span>
                 </font>
             </div>
-            <div class="col-md-6">
-                <img src="./Img/Miles pixel art.png
-            " alt="Perfil" class="SobreMin">
+            <div class="col-md-6 center">
+                <div id="Perfil" class="mx-auto d-block" >
+                </div>
             </div>
             <div id=text-2 class="col-md-3">
-                <font size="2">
+                <font size="4">
                     Bem vindo, me chamo Alisson sou desenvolvedor de Jogos. Cursei Analise e Desenvolvimento de
                     Sistemas, trabalho com Games a 4 anos, estudo como posso passar a melhor sensação de <span
                         style="color:#df3e23; font-weight:bold; font-size:125%;">juice</span> nos meus jogos, a sensação
@@ -61,39 +81,78 @@
                 </font>
             </div>
         </div> 
-    <div id="Skills" class="center">
-        <h3>Skills</h3>
-        <div class="p-2"></div>
-        <div class="row">
-            <div class="col-lg-2 col-md-4">
-                <img src="./Img/gms2_logo_512.png" alt="">
-                <p>Game Maker</p>
-            </div>
-            <div class="col-lg-2 col-md-4">
-                <img src="./Img/aseprite.png" alt="">
-                <p>Aseprite</p>
-            </div>
-            <div class="col-lg-2 col-md-4">
-                <img src="./Img/unity-tab-square-black.png" alt="">
-                <p>Unity</p>
-            </div>
-            <div class="col-lg-2 col-md-4">
-                <img src="./Img/Blender.png" alt="">
-                <p>Blender</p>
-            </div>
-            <div class="col-lg-2 col-md-4">
-                <img src="./Img/HtmlLogo.png" alt="">
-                <p>HTML</p>
-            </div>
-            <div class="col-lg-2 col-md-4">
-                <img src="./Img/css Logo.png" alt="">
-                <p>CSS</p>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2000">
+        <div class="container">
+            <div id="Skills" class="row">
+                <div  class="carousel-inner center">
+                    <h3>Skills</h3>
+                    <div class="carousel-item active">
+                            <img src="./Img/gms2_logo_512.png" alt="First slide">
+                            <p>Game Maker</p>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./Img/aseprite.png" alt="Second slide">
+                        <p>Aseprite</p>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./Img/unity-tab-square-black.png" alt="Third slide">
+                        <p>Unity</p>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./Img/CSharp.png" alt="Four slide">
+                        <p>CSharp</p>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./Img/Blender.png" alt="slide">
+                        <p>Blender</p>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./Img/HtmlLogo.png" alt="slide">
+                        <p>Html</p>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./Img/css Logo.png" alt="slide">
+                        <p>CSS</p>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./Img/js.png" alt="slide">
+                        <p>JavaScript</p>
+                    </div>
+                </div>
             </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <div class=" projects center">
+        <h3>Projetos</h3>
+        <div class="container">
+            <div class="row">
+                <div class="projetoBackImage center">
+                    <h3>Gameficando o Futuro</h3>
+                    <div id="text-project">
+                        O projeto Gameficando o futuro visa,ensinar a programação e criação de jogos digitais a crianças e adolescenter estudantes de escola pública.
+                        Onde meu trabalho foi na produçao da apostila para o projeto, em como se usar a ferramenta 
+                        <span style="color: rgb(42, 42, 233);">Construct 3</span> passando os ensinamentos da produção de um jogo e logica de programação.
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        
     </div>
     <!--Parte dos meus jogos que esta no itch.io-->
     <section class="Games">
         <div id="Jogos">
+            <div class=" logo center"> 
+                <img src="./Img/Games.png" alt="" >
+            </div>
             <div class="p-2"></div>            
             <div class="row">
                 <div class="col-lg-4 col-md-6">
@@ -106,7 +165,6 @@
                         <div class="icons">
                             <img src="./Img/Pc.png" title="Pc">
                             <img src="./Img/gms2_logo_512.png" title="Game Maker Studio">
-                            <img src="./Img/aseprite.png" title="Aseprite">
                         </div>
                         <div id="download"><a href="https://morfeudev.itch.io/pong" target="_blank"><img
                                     src="./Img/Download.png" alt=""></a></div>
@@ -122,7 +180,6 @@
                         <div class="icons">
                             <img src="./Img/Pc.png" title="Pc">
                             <img src="./Img/gms2_logo_512.png" title="Game Maker Studio">
-                            <img src="./Img/aseprite.png" title="Aseprite">
                         </div>
                         <div id="download"><a href="https://morfeudev.itch.io/space-shooter" target="_blank"><img
                                     src="./Img/Download.png" alt=""></a></div>
@@ -138,10 +195,29 @@
                         <div class="icons">
                             <img src="./Img/Pc.png" title="Pc">
                             <img src="./Img/gms2_logo_512.png" title="Game Maker Studio">
-                            <img src="./Img/aseprite.png" title="Aseprite">
                         </div>
                         <div id="download"><a href="https://morfeudev.itch.io/jogo-da-velha" target="_blank"><img
                                     src="./Img/Download.png" alt=""></a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="1500" data-pause="hover">
+            <div id="Artes" class="container">
+                <div class="row">
+                    <div class="logo center">
+                        <img src="./Img/Arte2D.png" alt="">
+                    </div>                   
+                    <div  class="carousel-inner center">
+                        <div class="carousel-item active">
+                                <img src="./Img/MockeupBoy.png" class="img-fluid" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Img/SpaceMockeup.png" class="img-fluid" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Img/NinjaMockeup.png" class="img-fluid" alt="slide">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -153,35 +229,42 @@
                     <li><a href="https://wa.me/5532984036447"><img src="./Img/TelefoneWhat.png" alt=""></a></li>
                 </ul>
             </div>
-            <div class="row" style="width: 100%; margin-top:200px;">
-                <div class="col-md-3">
-                    <img src="./Img/GameMobile.png" alt="" style="width: 70%;">
-                </div>
-                <div class="col-md-4">
-                    <h2>Menu</h2>
-                    <nav class="nav flex-column">
-                        <a href="#Info">Sobre Min</a>
-                        <a href="#Jogos">Jogos</a>
-                        <a href="#Contato">Contato</a>
-                    </nav>
-                </div>
-                <div class="col-md-4">
-                    <h2>Redes Socias</h2>
-                    <nav class="nav flex-column socialMedia">
-                        <a href="https://www.instagram.com/miles_gamedev/" target="_blank">Instagram</a>
-                        <a href="https://twitter.com/MilesGamedev" target="_blank">Twitter</a>
-                        <a href="https://www.youtube.com/channel/UCRNJrjOnLN6sdJM2odh0qfA" target="_blank">Youtube</a>
-                        <a href="https://milesgamedev.itch.io" target="_blank">Itch.io</a>
-                    </nav>
+            <div class="container Map">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h2>Menu</h2>
+                        <nav class="nav flex-column">
+                            <a href="#Info">Quem sou</a>
+                            <a href="#Jogos">Jogos</a>
+                            <a href="#Contato">Contato</a>
+                        </nav>
+                    </div>
+                    <div class="col-md-4">
+                        <h2>Redes Socias</h2>
+                        <nav class="nav flex-column socialMedia">
+                            <a href="https://www.linkedin.com/in/alisson-marques-benedicto-da-silva-799765212/" target="_blank">Linked<i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/MilesGamedev" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>
+                            <a href="https://www.youtube.com/channel/UCRNJrjOnLN6sdJM2odh0qfA" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i> Youtube</a>
+                            <a href="https://milesgamedev.itch.io" target="_blank"><i class="iconify" data-icon="fa-brands:itch-io" data-inline="true"></i>Itch.io</a>
+                            <a href="https://sketchfab.com/alissonGamedev" target="_blank"><img src="./Img/Skecthfab.svg"
+                                alt="" width="20px" height="20px">Sketchfab</a>
+                        </nav>
+                    </div>
+                    <div class="col-md-4">
+                        <h2>Contato</h2>
+                        <nav class="nav flex-column socialMedia">
+                            <a href="mailto:xdragondev@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i>alissonmb1445@gmail.com</a>
+                            <a href="https://wa.me/5532984036447" target="_blank"><i class="fa fa-phone" aria-hidden="true"></i>(32)98403-6447</a>
+                    </div>
                 </div>
             </div>
-            <div class="p-2"></div>
-            <div class="p-2"></div>
-            <div style="margin-left:50px; margin-top:120px;">
-                Copyright © 2021 Miles GameDev
+            <div style="text-align:center; margin-top: 10%; margin-bottom: 10px;" class="center">
+                Copyright © 2021 AlissonGamedev
             </div>
         </footer>
     </section>
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <script src="https://use.fontawesome.com/bca4cd3500.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
