--- a/index.html
+++ b/index.html
@@ -73,11 +73,14 @@
                 </div>
             </div>
             <div id=text-2 class="col-md-3">
-                <font size="4">
-                    Bem vindo, me chamo Alisson sou desenvolvedor de Jogos. Cursei Analise e Desenvolvimento de
-                    Sistemas, trabalho com Games a 4 anos, estudo como posso passar a melhor sensação de <span
-                        style="color:#df3e23; font-weight:bold; font-size:125%;">juice</span> nos meus jogos, a sensação
-                    do jogo uma da partes mais importantes para o entretenimento e diversão.
+                <font size="3">
+                    Bem-vindo, me chamo Alisson sou desenvolvedor de Jogos.
+                    Cursei Análise e Desenvolvimento de Sistemas, trabalho com a criação de Games há mais de 
+                    4 ano, trabalho tanto na parte artística quanto na programação procuro sempre pensar em 
+                    novas formas de ser passar a melhor sensação ao se jogar um jogo conhecido como
+                    <span style="color:#df3e23; font-weight:bold; font-size:125%;">"juice"</span> 
+                    focando no entretenimento e diversão. Os jogos aqui presentem no momento são projeto que 
+                    desenvolvi pessoalmente como estudo e cursos.
                 </font>
             </div>
         </div> 
