Alterei a logo do site e tambem tenti dar uma melhorada na parte sobre min

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
             </div>
             <div id=text-2 class="col-md-3">
                 <font size="3">
-                    Bem-vindo, me chamo Alisson sou desenvolvedor de Jogos.
+                    Bem-vindo, me chamo Alisson sou desenvolvedor de Jogos faco sites por hobbie.
                     Cursei Análise e Desenvolvimento de Sistemas, trabalho com a criação de Games há mais de 
-                    4 ano, trabalho tanto na parte artística quanto na programação procuro sempre pensar em 
+                    2 anos, trabalho tanto na parte artística quanto na programação procuro sempre pensar em 
                     novas formas de ser passar a melhor sensação ao se jogar um jogo conhecido como
                     <span style="color:#df3e23; font-weight:bold; font-size:125%;">"juice"</span> 
                     focando no entretenimento e diversão. Os jogos aqui presentem no momento são projeto que 
-                    desenvolvi pessoalmente como estudo e cursos.
+                    desenvolvi pessoalmente como estudo e em aulas de um cursos.
                 </font>
             </div>
         </div> 
@@ -262,7 +262,7 @@
                 </div>
             </div>
             <div style="text-align:center; margin-top: 10%; margin-bottom: 10px;" class="center">
-                Copyright © 2021 AlissonGamedev
+                Copyright © 2021 AlissonDev
             </div>
         </footer>
     </section>
