ajustes na pagina principal e troca de imagen do botao do menu

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </header>
     <nav class="navbar-expand-lg" id="navbar">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="button">
-            <img src="./Img/Icone SobreMin.png" alt="">
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="button" >
+            <img  id="navIcon" src="./Img/IconeMenuPlus.png" alt="" onclick="trocaImage()">
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto" id="navbar">
@@ -224,6 +224,7 @@
                     <div class="col-md-4">
                         <h2>Menu</h2>
                         <nav class="nav flex-column">
+                            <a href="">Home</a>
                             <a href="#Info">Quem sou</a>
                             <a href="#Jogos">Jogos</a>
                             <a href="#Contato">Contato</a>
@@ -249,7 +250,7 @@
                 </div>
             </div>
             <div style="text-align:center; margin-top: 10%; margin-bottom: 10px;" class="center">
-                Copyright © 2021 AlissonDev
+                <img src="./Img/Joystick.ico" alt="" width="5%"> Copyright © 2021 AlissonDev 
             </div>
         </footer>
     </section>
