--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
                 <li class="nav-item">
                     <a href="https://twitter.com/MilesGamedev" class="nav-link" target="_blank"><i class="fa fa-2x fa-twitter-square" aria-hidden="true"></i></a>
                 </li>
-                <li class="nav-item">
-                    <a href="https://sketchfab.com/alissonGamedev" class="nav-link" target="_blank"><img src="./Img/ScketchFab.png"
-                        alt="" width="35px" height="35px"></a>
-                </li>
             </ul>
     </nav>
     <header id="Home">
@@ -86,9 +82,13 @@
         </div> 
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2000">
         <div class="container">
+            <div class=" logo center"> 
+                <img src="./Img/Skills.png" alt="">
+            </div>
+           
             <div id="Skills" class="row">
                 <div  class="carousel-inner center">
-                    <h3>Skills</h3>
+                   
                     <div class="carousel-item active">
                             <img src="./Img/gms2_logo_512.png" alt="First slide">
                             <p>Game Maker</p>
@@ -134,7 +134,9 @@
         </a>
     </div>
     <div class=" projects center">
-        <h3>Projetos</h3>
+        <div class="center logo">
+            <img src="./Img/Projetos.png" alt="">
+        </div>
         <div class="container">
             <div class="row">
                 <div class="projetoBackImage center">
@@ -196,7 +198,7 @@
             <div id="Artes" class="container">
                 <div class="row">
                     <div class="logo center">
-                        <img src="./Img/Arte2D.png" alt="">
+                        <img src="./Img/Arte.png" alt="">
                     </div>                   
                     <div  class="carousel-inner center">
                         <div class="carousel-item active">
@@ -237,8 +239,6 @@
                             <a href="https://twitter.com/MilesGamedev" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>
                             <a href="https://www.youtube.com/channel/UCRNJrjOnLN6sdJM2odh0qfA" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i> Youtube</a>
                             <a href="https://milesgamedev.itch.io" target="_blank"><i class="iconify" data-icon="fa-brands:itch-io" data-inline="true"></i>Itch.io</a>
-                            <a href="https://sketchfab.com/alissonGamedev" target="_blank"><img src="./Img/Skecthfab.svg"
-                                alt="" width="20px" height="20px">Sketchfab</a>
                         </nav>
                     </div>
                     <div class="col-md-4">
