--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body onload="CreateDivs()">
     <nav id="socialMedia" class="navbar-expand-lg">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.linkedin.com/in/alisson-marques-benedicto-da-silva-799765212/" target="_blank"><i class="fa fa-2x fa-linkedin-square" aria-hidden="true"></i></a>
                 </li>
@@ -24,6 +24,9 @@
                 </li>
                 <li class="nav-item">
                     <a href="https://twitter.com/MilesGamedev" class="nav-link" target="_blank"><i class="fa fa-2x fa-twitter-square" aria-hidden="true"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a href="https://milesgamedev.itch.io" class="nav-link" target="_blank"><i class="iconify" data-icon="fa-brands:itch-io" data-inline="true"></i></a>
                 </li>
             </ul>
     </nav>
