Arrumei o alinhamento da parte dos meus jogos

--- a/index.html
+++ b/index.html
@@ -54,15 +54,16 @@
                 </li>
             </ul>
         </div>
+        own genius cart armor sheriff ability win resist bachelor print sort distance
     </nav>
-        <div id="Info" class="Info row center">
-            <div id=text class="col-md-3">
+        <div id="Info" class="Info row">
+            <div id=text class="col-md-3 text center">
                 <font size="3">
-                   A lei da mente e implacavel. <br>
-                   Oque você pensa, você cria; <br>
-                   O que você sente, você atrai; <br>
-                        O que você acredita <br>
-                        Torna-se realidade. <br>
+                   A lei da mente e implacavel.
+                   Oque você pensa, você cria;
+                   O que você sente, você atrai;
+                        O que você acredita.
+                        Torna-se realidade.
                         <span
                         style="color:#df3e23; font-weight:bold; font-size:150%;">~Buda~</span>
                 </font>
@@ -75,11 +76,11 @@
                 <font size="3">
                     Bem-vindo, me chamo Alisson sou desenvolvedor de Jogos e crio sites como passatempo.
                     Cursei Análise e Desenvolvimento de Sistemas, trabalho com a criação de Games há mais de 
-                    2 anos, trabalho tanto na parte artística quanto na programação procuro sempre pensar em 
-                    novas formas de ser passar a melhor sensação ao se jogar um jogo conhecido como
+                    2 anos, utilizo a Game Engine <span style="color:#33df23; font-weight:bold; font-size:125%;">GameMaker Studio 2</span>
+                    ,penso em novas formas de ser passar a melhor sensação ao se jogar, chamada 
                     <span style="color:#df3e23; font-weight:bold; font-size:125%;">"juice"</span> 
-                    focando no entretenimento e diversão. Os jogos aqui presentem no momento são projeto que 
-                    desenvolvi pessoalmente como estudo e em aulas de um cursos.
+                    focando no entretenimento e diversão. Os jogos aqui presentes no momento são projetos que 
+                    desenvolvi pessoalmente como estudo,aulas de curso e alguns trabalhos.
                 </font>
             </div>
         </div> 
