Correcao de texto errado.

--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
         <div id="text-2" class="center ">
             <font size="3">
                 Bem-vindo, me chamo Alisson sou desenvolvedor de Jogos e crio sites como passatempo.
-                Cursei Análise e Desenvolvimento de Sistemas, trabalho com a criação de Games há mais de 
-                2 anos, utilizo a Game Engine<span style="color:#33df23; font-weight:bold; font-size:125%;">GameMaker Studiom 2 </span>
-                ,penso em novas formas de ser passar a melhor sensação ao se jogar, chamada 
+                Cursei Análise e Desenvolvimento de Sistemas, trabalho com a criação de games há mais de 
+                2 anos, utilizo a Game Engine<span style="color:#33df23; font-weight:bold; font-size:125%;">GameMaker Studio 2 </span>
+                , penso em novas formas de ser passar a melhor sensação ao se jogar, chamada 
                 <span style="color:#df3e23; font-weight:bold; font-size:125%;">"juice"</span> 
                 focando no entretenimento e diversão. Os jogos aqui presentes no momento são projetos que 
-                desenvolvi pessoalmente como estudo,aulas de curso e alguns trabalhos.
+                desenvolvi pessoalmente como estudo, aulas de curso e alguns trabalhos.
+
             </font>
         </div>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2000">
