Mudaça na parte das redes sociais e retirada de algumas rede sociais

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                 </div>
             </div>
             <div id="text" class="col-md-4">
-                <p><span>Olá,</span>
+                <span>Olá,</span>
+                <p>
                 sou Alisson, Desenvolvedor de Games e apaixonado por front-end e artes para jogos no geral tanto 2 e 3D 
                 com mais de 3 anos de estudos. Possuo experiência com trabalho em equipe e algumas game engines tendo foco 
                 atualmente no game maker para meus projetos pessoais, sendo grande parte da experiência com unity. 
@@ -87,12 +88,12 @@
                 <div id="habilidades">
                     <h3>Games</h3>
                     <hr>
-                    <p>Faço utilizaçao do unity para a produçao de jogos 3D e mobile, GameMaker para jogos 2D e Mobile.</p>  
+                    <p>Utilizo a Game Engine Unity para a produçao de jogos 3D e GameMaker para jogos 2D e Mobile. Alem de possuir conhecimento em Godot e Construct 3.</p>  
                 </div>
                 <div id="habilidades">
-                   <h3>Arte 2D e 3D</h3>
+                   <h3>Arte 2D</h3>
                     <hr>
-                    <p>Utilizando de softwares como blender para modelagem 3D e o aseprite para arte 2D(Pixel Art).</p>
+                    <p>Com o software, aseprite crio artes 2D, sendo grande foco em Pixel Art.</p>
                 </div>
                 <div id="habilidades">
                     <h3>Front-End</h3>
@@ -111,7 +112,7 @@
                     <div id="text-project">
                         O projeto Gameficando o futuro visa,ensinar a programação e criação de jogos digitais a crianças e adolescenter estudantes de escola pública.
                         Onde meu trabalho foi na produçao da apostila para o projeto, em como se usar a ferramenta 
-                        <span style="color: rgb(116, 116, 116);">Construct 3</span> passando os ensinamentos da produção de um jogo e logica de programação.
+                        <span style="color: rgb(38, 131, 138);">Construct 3</span> passando os ensinamentos da produção de um jogo e logica de programação.
                     </div>
                 </div>
             </div>
@@ -156,8 +157,6 @@
                         <nav class="nav flex-column socialMedia">
                             <a href="https://github.com/MilesGamedev" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>Github</a>
                             <a href="https://www.linkedin.com/in/alisson-marques-benedicto-da-silva-799765212/" target="_blank">Linked<i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-                            <a href="https://twitter.com/MilesGamedev" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>
-                            <a href="https://www.youtube.com/channel/UCRNJrjOnLN6sdJM2odh0qfA" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i> Youtube</a>
                             <a href="https://milesgamedev.itch.io" target="_blank"><i class="iconify" data-icon="fa-brands:itch-io" data-inline="true"></i>Itch.io</a>
                         </nav>
                     </div>
@@ -176,6 +175,7 @@
     </section>
     
     <script src="./JS/AddProjects.js"></script>
+    <script src="./JS/RGB.js"></script>
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <script src="https://use.fontawesome.com/bca4cd3500.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
