--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="./CSS/BodyStyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./Img/Joystick.ico">
-    <title>Alisson GameDev</title>
+    <title>Alisson Marques</title>
 </head>
 
 <body onload="CreateDivs(); ">
-    <nav id="socialMedia" class="navbar-expand-lg">
+    <div id="body">
+        <nav id="socialMedia" class="navbar-expand-lg">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.linkedin.com/in/alisson-marques-benedicto-da-silva-799765212/" target="_blank"><i class="fa fa-2x fa-linkedin-square" aria-hidden="true"></i></a>
@@ -173,6 +174,8 @@
             </div>
         </footer>
     </section>
+    </div>
+   
     
     <script src="./JS/AddProjects.js"></script>
     <script src="./JS/RGB.js"></script>
