--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="https://www.linkedin.com/in/alisson-marques-benedicto-da-silva-799765212/" target="_blank"><i class="fa fa-2x fa-linkedin-square" aria-hidden="true"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://github.com/MilesGamedev" target="_blank" class="nav-link"><i class="fa fa-2x fa-github" aria-hidden="true"></i></a>
+                    <a href="https://github.com/AlissonMSilva" target="_blank" class="nav-link"><i class="fa fa-2x fa-github" aria-hidden="true"></i></a>
                 </li>
                 <li class="nav-item">
                     <a href="https://milesgamedev.itch.io" class="nav-link" target="_blank"><i class="iconify" data-icon="fa-brands:itch-io" data-inline="true"></i></a>
